# Meshing-accelerator

./: .gitignore  2d_testHPC.ipynb  README.md  pyproject.toml  test_modules_random.ipynb
HPC_Jobs/: README_multinode_qaoa.md  qaoa_HPC_runner.py  qaoa_HPC_runner_multinode.py  qaoa_qulacs_mpi.py  qaoa_qulacs_mpi3.py  qaoa_qulacs_mpi_observable.py  run_qaoa.sh  run_qaoa3.sh  run_qaoa_multinode.sh
data/: hpc_test_sq.dxf  low_angle.dxf  test.dxf
helper_functions/: mesh_output_analysis.py  npz_to_pauli.py
main/: hamiltonian_builder.py  pyproject.toml
main/data/: sample.dxf
main/node_manager/: adaptive_generator.py  crude_generator.py  gaussian_patch_merger.py  mesh_builder.py  patch_generator.py
main/orchestrator/: flow.py  patch_record.py  prefect_utils.py  resource_config.py  visualize_patch_output.py
main/outputs/hamiltonians/: 772a363248b6.npz
main/outputs/records/: 772a363248b6.json
main/quantum_processing/: hamiltonian_builder.py  qaoa_aer_pipeline.py
meshoptimiser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
node_manager/: adaptive_generator.py  critical_region_manager.py  crude_generator.py  gaussian_patch_merger.py  geometry_validator.py  mesh_builder.py  patch_generator.py
orchestrator/: flow.py  flow_annealer.py  patch_record.py  region_partition_diagnostic.py
quantum_processing/: hamiltonian_builder.py  qaoa_aer_pipeline.py  qaoa_ibm_batch_pipeline.py  qaoa_iqm_pipeline.py  qaoa_iqm_qrisp_pipeline.py  qaoa_qulacs_mpi.py  qubo_bqm_conversion.py
